<resources>
    <string name="app_name">Evision</string>
    <string name="title_activity_main">Actividad principal</string>
    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="nav_header_title">Ingresar/Crearse una cuenta</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Barra de navegación</string>
    <string name="action_settings">Ajustes</string>
    <string name="hello_blank_fragment">Hola gragmento vacío</string>
    <string name="lbl_login">Ingresar</string>
    <string name="lbl_login_h1">Obtenga acceso a sus cuentas y pedidos.</string>
    <string name="forgotpassword">Se me olvidó mi contraseña</string>
    <string name="lbl_or">o</string>
    <string name="lbl_signup">Crear una cuenta</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_accountdetails">Mi Cuenta</string>
    <string name="menu_trackorder">Rastree su pedido</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_signout">Salir de su cuenta</string>
    <string name="menu_contactinfo">Contact</string>
    <string name="txt_profile">Perfíl</string>
    <string name="txt_saved_address">Direcciónes guardadas</string>
    <string name="somethingwentwron">Hubo un error, favor intente nuevamente.</string>
    <string name="menu_home">Página Principal</string>
    <string name="password">Contraseña</string>
    <string name="mobile_no">Teléfono Celular</string>
    <string name="email">Correo electrónico</string>
    <string name="lastname">Apellido</string>
    <string name="firstname">Nombre</string>
    <string name="create_new_ac">Crear una cuenta</string>
    <string name="existing_user_login">Tiene cuenta? Ingresar.</string>
    <string name="entervalidemail">Ingrese un correo electrónico válido</string>
    <string name="product">Producto</string>
    <string name="addmore">Seguir Comprando</string>
    <string name="keepbuying">Seguir Comprando</string>
    <string name="procedtopay">Proceder a Pagar</string>
    <string name="title_add_toocart">Carrito de compras</string>
    <string name="quantity">Cantidad :</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Impuesto 7%</string>
    <string name="totalprice">Precio Total</string>
    <string name="txt_address">Dirección</string>
    <string name="edit">Editar</string>
    <string name="update">Actualizar</string>
    <string name="confirmpassword">Confirmar Contraseña</string>
    <string name="address1">Dirección primaria</string>
    <string name="address2">Dirección Secundaria</string>
    <string name="country">Provincia</string>
    <string name="state">Distrito</string>
    <string name="city">Corregimientos</string>
    <string name="pincode">Pin</string>
    <string name="save">Guardar</string>
    <string name="manufacturedby">Fabricado por</string>
    <string name="hello_gest">Bienvenido Usuario</string>
    <string name="welcometoevision">Bienvenido a Evision</string>
    <string name="menu_login">Ingresar</string>
    <string name="menu_onlinesale">Products en stock</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_instragram">Instagram</string>
    <string name="menu_whatsapp">Whatsapp</string>
    <string name="menu_phone">Teléfono</string>
    <string name="menu_correo">Correo electrónico</string>
    <string name="socialshare">Síguenos</string>
    <string name="contact_us">contactar via app</string>
    <string name="menu_news">Noticias</string>
    <string name="menu_superprice">Super precios</string>
    <string name="enterkeyword">Que desea buscar?</string>
    <string name="searchresult">Resultado de búsqueda</string>
    <string name="price">Precio: </string>
    <string name="seemore">Ver más </string>
    <string name="selectstate">Estado</string>
    <string name="selectcountry">Provincia</string>
    <string name="selectcity">Distrito</string>
    <string name="title_activity_contact_us">Contáctenos</string>
    <string name="contactusheader">Háganos cualquier consulta</string>
    <string name="contactus_sub_hedaer">Desea hablar con nuestro personal experto? Solo envíenos su información de contacto y le estaremos contactando brevemente </string>
    <string name="iwouldliketoconsult">Me gustaría consultar</string>
    <string name="yourname">Nombre</string>
    <string name="youremail">Correo Electrónico</string>
    <string name="youreph">Teléfono</string>
    <string name="yourquestion">Tu consulta</string>
    <string name="submit">Enviar</string>
    <string name="txt_myorder">Mis Ordenes</string>
    <string name="orderid">Id del pedido</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_order_details">Detalles del pedido</string>
    <string name="modelnumber">Modelo</string>
    <string name="productdescription">Descripción</string>
    <string name="qty">Cantidad</string>
    <string name="subtot">Subtotal</string>
    <string name="deliverycharge">Costo de entrega</string>
    <string name="totaltopay">Total a Pagar</string>
    <string name="oredrfor">Pedido para</string>
    <string name="billingandshippingaddress">Dirección de facturación / entrega</string>
    <string name="delierycollectionaddress">Delivery / Dirección de recogida</string>
    <string name="paymentmethod">Método de Pago</string>
    <string name="oredrdate">Fecha del pedido</string>
    <string name="paymentstatus">Estado de pago</string>
    <string name="brand">Marca</string>
    <string name="filterby">Filtrar por</string>
    <string name="apply">Aplicar</string>
    <string name="title_activity_check_out_address">Facturación &amp; Dirección de entrega</string>
    <string name="telephone">Teléfono</string>
    <string name="mybillingandshipping"><![CDATA[Mi dirección de facturación y entrega son diferentes]]></string>
    <string name="entercityname">Ciudad</string>
    <string name="next">Siguiente</string>
    <string name="chosedelivery">Elige como deseas recibir tu mercancía</string>
    <string name="pickupfromstore">Recoger en tienda</string>
    <string name="delivery">Delivery</string>
    <string name="Choosedelivery">Choose delivery</string>
    <string name="pickupstore">Selecciona donde quieres recoger tu pedido</string>
    <string name="chose_payment_method">Deseas pagar en tienda o online?</string>
    <string name="applycoupon"> Tiene un cupón de descuento?</string>
    <string name="revision_text">Revisión del pedido</string>
    <string name="alert_delivery">Selecciona una de las opciones</string>
    <string name="thankyou">Gracias</string>
    <string name="foryourorder">Por su pedido</string>
    <string name="orderno_">Número de orden </string>
    <string name="tracyourorderhere">Rastrea tu pedido aquí</string>
    <string name="continueshoping">Seguir Comprando</string>
    <string name="selectdeliverytype">Tipo de entrega</string>
    <string name="add_toocart">Agregar al carrito</string>
    <string name="no_product_in_your_cart">Ningún producto en su carrito</string>
    <string name="followus">SIGUENOS</string>
    <string name="fbshare">https://www.facebook.com/EVision</string>
    <string name="cardholdername">Nombre en la tarjeta</string>
    <string name="cardtype">Seleccionar tipo de tarjeta</string>
    <string name="searchtext">Ingrese el texto de búsqueda</string>
    <string name="nodatfound">Datos no encontrados</string>
    <string name="searchproduct">Buscar Producto</string>
    <string name="choosecity">Ciudad selecta</string>
    <string name="choosestate">Seleccione Distrito</string>
    <string name="choosecountry">Seleccionar país</string>
    <string name="shippingaddressheader">Información de envío</string>
    <string name="billing_addressheader">Información de facturación</string>
    <string name="orderstatus">Estado de pago</string>
    <string name="couponappliedoreder">Coupon Applied</string>
    <string name="newversionavalible">Una nueva actualización está disponible</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="card_exp_date">Fecha de caducidad</string>
    <string name="remindermelater">Recordarme mas Tarde</string>
    <string name="nothanks">No Gracias</string>
    <string name="rateus">Calificar </string>
    <string name="app_rating"> Si le está gustando la aplicación de E Vision, porfavor tómese un momento en  calificarla. Gracias por su atención</string>
    <string name="term1"> <u>terminos y condiciones de venta</u>.</string>
    <string name="policy"><u>Políticas de Privacidad</u></string>
    <string name="accepttermcondition">Aceptar</string>
    <string name="acceptnotification">Elige “Aceptar” para que podamos enviarte notificaciones sobre el estado de tus futuros pedidos</string>
    <string name="botto_nav_home">Home</string>
    <string name="botto_nav_cart">Mi carrito</string>
    <string name="botto_nav_productinstock">Products stock</string>
    <string name="botto_nav_my_account">My account</string>
    <string name="botto_nav_contactus">ContactUs</string>
    <string name="rate_product">Calificaciones y revisión</string>
    <string name="review_product">Opiniones de clientes</string>
    <string name="rating_dialog_header">Enviar Calificación</string>
    <string name="writecommand">Escribe tus comentarios</string>
    <string name="skip">omitir</string>
    <string name="submitrating">Enviar calificación</string>
    <string name="notify_btn_text">Notificarme cuando este producto vuelva en stock </string>
    <string name="submitdetails">Enviar detalles</string>
    <string name="notificatio_dialog_header">Avísame cuando esto
     producto de nuevo en stock</string>
    <string name="entifyemail">Wprowadź adres e-mail</string>
    <string name="default_notification_channel_id">evision_channel</string>
    <string name="samsunginstall">Samsung Self Installation</string>
    <string name="branches">Sucursales</string>
    <string name="termforsale">Términos y Condiciones</string>
    <string name="privayforsale">Política de privacidad</string>
</resources>