<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
      <!--  <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon"
            android:title="@string/menu_home" />
-->
      <!--  <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_category" />-->

      <!--  <item
            android:id="@+id/nav_onlinesale"
            android:icon="@drawable/ic_online_shop"
            android:title="@string/menu_onlinesale" />
-->
        <!--  <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_newspaper"
                android:title="@string/menu_news" />-->
        <!--<item
            android:id="@+id/nav_superprice"
            android:icon="@drawable/ic_tag"
            android:title="@string/menu_superprice" />-->

      <!--  <item
            android:id="@+id/nav_acc"
            android:icon="@drawable/ic_user_account_box"
            android:title="@string/menu_accountdetails" />-->

        <!--<item-->
            <!--android:id="@+id/nav_trackorder"-->
            <!--android:icon="@drawable/ic_play_arrow"-->
            <!--android:title="@string/menu_trackorder" />-->

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
       <!-- <item
            android:id="@+id/nav_contactinfo"
            android:title="@string/menu_contactinfo" />-->
        <item android:id="@+id/nav_mail"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_correo"></item>

        <item android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/menu_facebook"></item>

        <item android:id="@+id/nav_instragram"
            android:icon="@drawable/ic_instagram"
            android:title="@string/menu_instragram"></item>

        <item android:id="@+id/nav_whatsapp"
            android:icon="@drawable/ic_whatsapp"
            android:title="@string/menu_whatsapp"></item>

        <item android:id="@+id/nav_phone"
            android:icon="@drawable/ic_call"
            android:title="@string/menu_phone"></item>



        <item
            android:id="@+id/nav_menu_signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_signout" />

    </group>
     <group>

             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_contact"
                 android:title="@string/contact_us" />
         <item
             android:id="@+id/nav_location"
             android:icon="@drawable/ic_location"
             android:title="@string/branches" />
         <item
             android:id="@+id/nav_termcodition"
             android:icon="@drawable/ic_terms_and_conditions"
             android:title="@string/termforsale" />
         <item
             android:id="@+id/nav_privacypolicy"
             android:icon="@drawable/ic_privacy_policy"
             android:title="@string/privayforsale" />
         <!--<item-->
         <!--android:id="@+id/nav_share"-->
         <!--android:icon="@drawable/ic_menu_share"-->
         <!--android:title="@string/socialshare" />-->
       <!--  <item android:id="@+id/nav_samsunginstall"
             android:title="@string/samsunginstall"></item>
-->
     </group>

</menu>
