<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="32dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:visibility="gone"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/TXT_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/hello_gest"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcometoevision"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TXT_EMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textSize="12sp"
    android:visibility="gone" />
</LinearLayout>
    <TextView
        android:id="@+id/SAMSUNG_INSTALLATION"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/samsunginstall"
        android:textColor="@color/white"
        android:background="#2d40ed"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="18sp" />


</LinearLayout>
