<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reantangle_shape_grey_broder"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/rating_dialog_header"></TextView>
            <ImageView
                android:id="@+id/btn_closepopup"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:background="@drawable/popup_close_icon"
                android:layout_margin="@dimen/_8sdp"
                android:layout_alignParentRight="true"></ImageView>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/black"></TextView>

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:theme="@style/RatingBar"
        android:stepSize="1"
        android:layout_height="wrap_content"></RatingBar>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop = "@dimen/_23sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/til_writecommant"
                android:hint = "@string/writecommand"
                android:paddingLeft="@dimen/_5sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_14sdp"
            android:text="@string/submitrating"
            android:textColor="@color/white"
            android:background="@drawable/rectangular_red_roundcorner"></Button>

        <TextView
            android:id="@+id/txt_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_marginTop="@dimen/_3sdp"

            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"></TextView>

    </LinearLayout>
</LinearLayout>