<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_170sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/reantangle_shape_grey_broder">
       <androidx.appcompat.widget.AppCompatImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/_10sdp"
           android:background="@mipmap/ic_launcher"
           android:layout_centerHorizontal="true"></androidx.appcompat.widget.AppCompatImageView>

        <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/_11sdp"
                android:gravity="center"
                 android:text="@string/app_rating"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="@dimen/_10sdp"></TextView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_14sdp"
                android:orientation="horizontal">
            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                        android:id="@+id/btnrateus"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentBottom="true"

                        android:text="@string/rateus"

                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp"
                        android:background="@drawable/rectangle_btn_rating"
                        android:layout_centerHorizontal="true"></Button>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.22">
                <Button
                        android:id="@+id/btn_remindermelater"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentBottom="true"

                        android:text="@string/remindermelater"

                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp"
                    android:padding="@dimen/_1sdp"
                        android:background="@drawable/rectangle_btn_rating"
                        android:layout_centerHorizontal="true"></Button>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                <Button
                        android:id="@+id/btn_nothanks"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentBottom="true"

                        android:text="@string/nothanks"

                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp"
                        android:background="@drawable/rectangle_btn_rating"
                        android:layout_centerHorizontal="true"></Button>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>